# telecrab

./: Cargo.toml  LICENSE  sample_config.toml
src/: cli.rs  config.rs  faketls.rs  main.rs  obfuscated2.rs  proxy.rs  safety.rs  secret.rs  tokio_utils.rs
src/faketls/: conn.rs  constants.rs  mod.rs  record.rs  tests.rs
src/obfuscated2/: conn.rs  frame.rs  mod.rs  server.rs
src/telegram/: known_addresses.rs  mod.rs
