[package]
name = "mtproto-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.3", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
